18-gce-ingress/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: gce-ingress
spec:
  rules:
  - host: echoserver-secure.acoshift.me
    http:
      paths:
      - backend:
          serviceName: echoserver
          servicePort: 8080
        path: /*
  tls:
  - secretName: echoserver-secure-acoshift-me-tls
    hosts:
    - echoserver-secure.acoshift.me
